fix(css): colors blocked by false comments

--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -1,15 +1,15 @@
 :root {
-	// main
+	/* main */
 	--color-primary: #2b4499;
 	--color-white: #fff;
 	--color-black: #000;
 
-	// background
+	/* background */
 	--color-bg-light: #fff;
 	--color-bg-medium: #f4f7ff;
 	--color-bg-dark: #cfdaff;
 
-	// text
+	/* text */
 	--color-text-black: #000;
 	--color-text-white: #fff;
 	--color-text-primary: var(--color-primary);
