--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -33,7 +33,7 @@
 	outline: none;
 
 	/* typography */
-	font-family: Ubuntu, Mulish, Segoe UI, sans-serif;
+	font-family: Mulish, Segoe UI, sans-serif;
 	color: black;
 	font-size: 1rem;
 	font-style: normal;
