feat: Services section & changes on the hero styling

--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -5,6 +5,7 @@
 	--color-black: #1b4f61; */
 
 	--color-primary: #2b4499;
+	--color-accent: #fcde8a;
 	--color-white: #fff;
 	--color-black: #000;
 
