chore: change color-text-3 to 82D2C2

--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -22,7 +22,7 @@
 	/* text */
 	--color-text-1: #1b4f61;
 	--color-text-2: #5e9288;
-	--color-text-3: #90c3b9;
+	--color-text-3: #82d2c2;
 
 	/* TODO remove these after new styling applied */
 	--color-text-black: #000;
