--- a/src/lib/styles/app.scss
+++ b/src/lib/styles/app.scss
@@ -7,19 +7,19 @@
 	font-family: Zilla Slab;
 	font-size: 2.5rem;
 	font-weight: 700;
-	// color: var(--color-text-1); // TODO enable after color palette is finalized
+	color: var(--color-neutral);
 }
 
 @mixin paragraph-1 {
 	font-size: 1rem;
 	font-weight: 600;
 	line-height: 115%;
-	// color: var(--color-text-2); // TODO enable after color palette is finalized
+	color: var(--color-neutral-pale);
 }
 
 @mixin paragraph-2 {
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 125%;
-	// color: var(--color-text-2); // TODO enable after color palette is finalized
+	color: var(--color-neutral-pale);
 }
