feat: make neutral the default content color

--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -32,7 +32,7 @@
 
 	/* typography */
 	font-family: Mulish, Segoe UI, sans-serif;
-	color: black;
+	color: var(--color-neutral);
 	font-size: 1rem;
 	font-style: normal;
 	text-decoration: none;
