--- a/src/lib/styles/markdown.scss
+++ b/src/lib/styles/markdown.scss
@@ -1,3 +1,7 @@
+* {
+	line-height: 1.6;
+}
+
 a,
 a:visited {
 	color: #3498db;
@@ -13,7 +17,7 @@ a:active {
 
 p {
 	font-size: 1rem;
-	margin-bottom: 3em;
+	margin-bottom: 2em;
 }
 
 h1,
@@ -74,4 +78,12 @@ pre {
 	padding: 0.5rem;
 	line-height: 1.25;
 	overflow-x: scroll;
+}
+
+li {
+	margin-left: 1em;
+	margin-bottom: 1em !important;
+}
+li::marker {
+	font-weight: bold;
 }
